# Zenbook-Control

./: Cargo.toml  README.md  flake.nix
.github/: FUNDING.yml
assets/: style.css
locales/: de.yml  en.yml  pt-br.yml  pt.yml
packaging/: asus-hub-appimage.desktop  ayuz-appimage.desktop  cargo-sources.json  de.guido.asus-hub.desktop  de.guido.asus-hub.metainfo.xml  de.guido.ayuz.desktop  de.guido.ayuz.metainfo.xml  io.github.traciges.asus-hub.desktop  io.github.traciges.asus-hub.xml  io.github.traciges.asus-hub.yml
packaging/udev/: 99-ayuz-numberpad.rules
src/: app.rs  autostart.rs  main.rs  search.rs  sys_paths.rs  tray.rs
src/components/: home.rs  mod.rs  widgets.rs
src/components/animatrix/: animatrix.rs  mod.rs
src/components/audio/: mod.rs  sound_modes.rs  volume.rs
src/components/aura/: aura.rs  aura_device.rs  aura_page.rs  mod.rs
src/components/display/: color_gamut.rs  farbskala.rs  helpers.rs  mod.rs  oled_care.rs  oled_dimming.rs  splendid.rs  target_mode.rs  zielmodus.rs
src/components/input/: fn_key.rs
src/components/keyboard/: aura.rs  auto_backlight.rs  auto_beleuchtung.rs  backlight.rs  backlight_idle.rs  fn_key.rs  gestures.rs  mod.rs  ruhezustand.rs  touchpad.rs
src/components/system/: apu_mem.rs  battery.rs  fan.rs  fan_osd.rs  gpu.rs  mod.rs
src/components/touchpad/: gestures.rs  mod.rs  numberpad.rs  touchpad.rs
src/services/: commands.rs  config.rs  dbus.rs  dbus_animatrix.rs  edge_gestures.rs  evdev_runner.rs  fan_hotkey.rs  kde_brightness.rs  migration.rs  mod.rs  numberpad.rs  numberpad_layouts.rs
