[package]
name = "ayuz"
version = "1.1.4"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Traciges/Ayuz"
description = "Unofficial MyAsus Clone for Asus Laptops"
authors = ["Guido Philipp"]

[dependencies]
relm4 = { version = "0.10", features = ["libadwaita"] }
libadwaita = { version = "0.8", features = ["v1_8"] }
gtk4 = { version = "0.10", features = ["v4_14"] }
gtk4-layer-shell = "0.6"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
futures-util = "0.3"
ksni = "0.2"
evdev = { version = "0.13.2", features = ["tokio"] }
libc = "0.2"
rust-i18n = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
rog_anime = { version = "1", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/ayuz", "usr/bin/ayuz", "755"],
    ["packaging/de.guido.ayuz.desktop", "usr/share/applications/", "644"],
    ["packaging/de.guido.ayuz.metainfo.xml", "usr/share/metainfo/", "644"],
    ["assets/trayicon.png", "usr/share/icons/hicolor/128x128/apps/de.guido.ayuz.png", "644"],
    ["assets/anime/**/*.gif", "usr/share/ayuz/anime/", "644"],
    ["packaging/udev/99-ayuz-numberpad.rules", "usr/lib/udev/rules.d/99-ayuz-numberpad.rules", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ayuz", dest = "/usr/bin/ayuz", mode = "755" },
    { source = "packaging/de.guido.ayuz.desktop", dest = "/usr/share/applications/de.guido.ayuz.desktop", mode = "644" },
    { source = "packaging/de.guido.ayuz.metainfo.xml", dest = "/usr/share/metainfo/de.guido.ayuz.metainfo.xml", mode = "644" },
    { source = "assets/trayicon.png", dest = "/usr/share/icons/hicolor/128x128/apps/de.guido.ayuz.png", mode = "644" },
    { source = "assets/anime/**/*.gif", dest = "/usr/share/ayuz/anime/", mode = "644" },
    { source = "packaging/udev/99-ayuz-numberpad.rules", dest = "/usr/lib/udev/rules.d/99-ayuz-numberpad.rules", mode = "644" }
]

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "libm.so*",
    "libgcc_s.so*",
]
icon = "assets/trayicon.png"
desktop_entry = "packaging/ayuz-appimage.desktop"
assets = ["packaging/appimage/usr", "assets/anime"]
